manifests/dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: webappoperacion
spec:
  selector:
    app: webappoperacion
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
